--- a/accessory/css/accessory.css
+++ b/accessory/css/accessory.css
@@ -1,5 +1,5 @@
 /*test for git*/
-
+/*test for git2*/
 @charset "UTF-8";
 .text-left {
   text-align: left; }
@@ -232,7 +232,9 @@ body {
   /* Chrome 19+ & Safari 6+ */ }
 
 .fix_ie_png {
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=#00FFFFFF, endColorstr=#00FFFFFF ); }
+  filter: progid:DXImageTransform.Microsoft.gradient(
+ startColorstr=#00FFFFFF, endColorstr=#00FFFFFF
+ ); }
 
 @media all and (min-width: 721px) {
   #ZenFone__Zoom {
